# webpeel

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.worker  FEATURES.md  PYTHON_SDK_GUIDE.md  README.md  SECURITY.md  SELF_HOST.md  competitor-analysis.md  docker-compose.yaml  docker-compose.yml  eslint.config.js  llms.txt  openapi.yaml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  server.json  test-features.js  test-truncation.js  tsconfig.json
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.internal/: SMITHERY-SUBMISSION.md  SUBAGENT-RULES.md
.well-known/: ai-plugin.json
audit/: backend-security-report.md
benchmarks/: comparison-v2.md  results-v2-jina-reader.json  results-v2-scrapingbee.json  results.json  run.ts
dashboard/: next.config.ts  package-lock.json  package.json  vercel.json
docs/: landing.html
k8s/: README.md  api-deployment.yaml  monitor-and-alert.sh  monitor-cronjob.yaml  namespace.yaml  redis-deployment.yaml  secrets.yaml  worker-deployment.yaml
migrations/: 001_init.sql  002_weekly_usage.sql  004_usage_logs.sql  005_refresh_tokens.sql  006_free_tier_500.sql  013_dual_alert_thresholds.sql  014_jobs_updated_at.sql
peeltls/: fetch.go
scripts/: bench-retailers.ts  bundle-cli.js  cli-dx-test.sh  compare-evidence-selection.ts  deploy.sh  e2e-verify.sh  review.sh  (+18 more)
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/webpeel/: __init__.py  client.py  exceptions.py  types.py
(+339 files in other folders)
