[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webpeel"
version = "0.4.0"
description = "Python SDK for WebPeel — fast web fetcher for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Jake Liu"}]
keywords = ["web-scraping", "ai", "llm", "markdown", "mcp", "firecrawl-alternative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://webpeel.dev"
Documentation = "https://webpeel.dev/llms.txt"
Repository = "https://github.com/JakeLiuMe/webpeel"
Issues = "https://github.com/JakeLiuMe/webpeel/issues"
